# final-project-soil-erosion-estimation-using-a-microsoft-kinect

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt
demos/src/: FeaturesMatcherDemo.cpp  SecuencialRegistrationDemo.cpp  SecuencialRegistrationDemoWithVisualUpdates.cpp
doc/tesis/: abstract.tex  agradecimientos.tex  aplicaciones.tex  cap1.tex  cap2.tex  cap3.tex  cap4.tex  conclusiones.tex  ensayos.tex  extra.sty  filtrado_y_conversion_prototipo.tex  introduccion.tex  mibib.bib  overview.tex  publicaciones.tex  registracion.tex  resultados_y_analisis.tex  resumen.tex  revision-estado-del-arte.tex  sensor-kinect.tex  template.tex  tesis.bst  tesis.cls  trabajos_futuros.tex
features/: CMakeLists.txt
features/include/features/: FeaturesFinder.h  GlobalRegistration.h  GlobalRegistrationFactory.h  OpenCVBaseFeaturesFinder.h  OpenCVBinaryFeaturesFinder.h  OpenCVRealFeaturesFinder.h  RealFeaturesMatcher.h  Utils.h  descriptor_representations.h  descriptor_types.h  types.h
features/include/features/impl/: GlobalRegistration.hpp  OpenCVBaseFeaturesFinder.hpp  OpenCVBinaryFeaturesFinder.hpp  OpenCVRealFeaturesFinder.hpp  RealFeaturesMatcher.hpp
features/src/: GlobalRegistration.cpp  GlobalRegistrationFactory.cpp  OpenCVBinaryFeaturesFinder.cpp  OpenCVRealFeaturesFinder.cpp  RealFeaturesMatcher.cpp  Utils.cpp
future/: FeaturesFinderDemo.cpp
include/: Features.h  FeaturesFinder.h  OpenCVFeaturesFinder.h  OpenCVFeaturesFinder.hpp  OrganizedFeaturesFinder.h  PCLFeaturesFinder.h  PCLFeaturesFinder.hpp  Utils.h
source/: CMakeLists.txt  FeaturesFinderDemo.cpp  MatchFeaturesDemo.cpp  OpenCVFeaturesFinder.cpp  OrganizedFeaturesFinder.cpp  PCLFeaturesFinder.cpp  Utils.cpp
source/Common/: Status.h
source/Demos/: FindExtremaDemo.cpp  ScalerDemo.cpp  SecuencialRegistrationDemo.cpp  SecuencialRegistrationDemoWithInteraction.cpp  SecuencialRegistrationDemoWithVisualUpdates.cpp
source/Descriptor/: DescriptorRepresentation.h  DescriptorType.h
source/FeaturesFinder/: OpenCVBaseFeaturesFinder.h  OpenCVBaseFeaturesFinder.hpp  OpenCVBinaryFeaturesFinder.cpp  OpenCVBinaryFeaturesFinder.h  OpenCVBinaryFeaturesFinder.hpp  OpenCVRealFeaturesFinder.cpp  OpenCVRealFeaturesFinder.h  OpenCVRealFeaturesFinder.hpp
source/FeaturesMatcher/: BinaryFeaturesMatcher.h  FeaturesMatcher.h  RealFeaturesMatcher.cpp  RealFeaturesMatcher.h  RealFeaturesMatcher.hpp
source/GlobalRegistration/: GlobalRegistration.cpp  GlobalRegistration.h  GlobalRegistration.hpp  GlobalRegistrationFactory.cpp  GlobalRegistrationFactory.cpp~  GlobalRegistrationFactory.h
source/IO/: CloudGenerator.cpp  CloudGenerator.h
source/Tools/: ErosionModelAdjustmentTool.h  RegistrationTool.cpp  RegistrationTool.h  RegistrationTool.hpp
source/Utils/: Utils.cpp  Utils.h
source/features/: descriptor_representations.h  descriptor_types.h
test/: CMakeLists.txt
test/features/: CMakeLists.txt  test_descriptor_representation.cpp  test_opencv_features_finder.cpp
