
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${INCLUDE_DIR})

# add_library(features ${INCLUDE_DIR}/features/descriptor_types.h
# 					 ${INCLUDE_DIR}/features/descriptor_representations.h)

# target_link_libraries(features ${PCL_LIBRARIES}
# 							   ${Boost_LIBRARIES} )
